fix(css): :lipstick:  fix button align

--- a/src/components/elements/Button/Button.module.scss
+++ b/src/components/elements/Button/Button.module.scss
@@ -19,6 +19,7 @@
   outline: none;
   transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
   align-items: center;
+  justify-content: center;
 
   &--size-small {
     padding: .25rem .5rem;
